Fix swagger authorization
