# docs/swagger.json
@@ -9,6 +9,11 @@
     "paths": {
         "/books": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "List all books",
                 "consumes": [
                     "application/json"
@@ -20,6 +25,15 @@
                     "book"
                 ],
                 "summary": "List all books",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -67,6 +81,11 @@
         },
         "/books/": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Update book by Admin",
                 "consumes": [
                     "application/json"
@@ -87,6 +106,13 @@
                         "schema": {
                             "$ref": "#/definitions/entity.Book"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -99,6 +125,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Delete book by Admin",
                 "consumes": [
                     "application/json"
@@ -117,6 +148,13 @@
                         "name": "bookID",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -131,6 +169,11 @@
         },
         "/books/borrow": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Borrow a book",
                 "consumes": [
                     "application/json"
@@ -151,6 +194,13 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -165,6 +215,11 @@
         },
         "/books/reserve": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Reserve a book",
                 "consumes": [
                     "application/json"
@@ -185,6 +240,13 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -199,6 +261,11 @@
         },
         "/books/return": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Return a book",
                 "consumes": [
                     "application/json"
@@ -219,6 +286,13 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -233,6 +307,11 @@
         },
         "/search/author": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Search book by author",
                 "consumes": [
                     "application/json"
@@ -251,6 +330,13 @@
                         "name": "author",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -268,6 +354,11 @@
         },
         "/search/title": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Search book by title",
                 "consumes": [
                     "application/json"
@@ -285,6 +376,13 @@
                         "description": "title",
                         "name": "title",
                         "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -339,7 +437,7 @@
             "get": {
                 "security": [
                     {
-                        "JWT": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "Get user profile",
@@ -350,6 +448,15 @@
                     "User"
                 ],
                 "summary": "Get user profile",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
